# divider-app

./: .coverage  .gitignore  CHANGELOG.rst  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  publish.yml
changelog.d/: 20220818_141902_thomas.steck.md
divide_stuff/: __init__.py
tests/: test_divide_stuff.py
